add role to login response
