# docs/openapi.yaml
@@ -95,15 +95,12 @@ paths:
             tags:
                 - UserService
             operationId: UserService_Login
-            parameters:
-                - name: username
-                  in: query
-                  schema:
-                    type: string
-                - name: password
-                  in: query
-                  schema:
-                    type: string
+            requestBody:
+                content:
+                    application/json:
+                        schema:
+                            $ref: '#/components/schemas/UserLoginRequest'
+                required: true
             responses:
                 "200":
                     description: OK
@@ -191,11 +188,22 @@ components:
                     type: string
                 address:
                     type: string
+        UserLoginRequest:
+            type: object
+            properties:
+                username:
+                    type: string
+                password:
+                    type: string
         UserLoginResponse:
             type: object
             properties:
                 user:
                     $ref: '#/components/schemas/User'
+                roleId:
+                    type: array
+                    items:
+                        type: string
         UserRegisterRequest:
             type: object
             properties:
